--- a/index.html
+++ b/index.html
@@ -15,18 +15,20 @@
     <div class="container">
       <div class="row">
         <div class="span12">
-          <h1>Say Cheese!</h1>
+          <h1>Say Cheese! - QR Code Edition</h1>
           <p class="lead">Minimal javascript library for integrating a webcam and snapshots into your app.</p>
-          <iframe src="http://ghbtns.com/github-btn.html?user=leemachin&repo=say-cheese&type=watch&count=true&size=large"
+          <!-- <iframe src="http://ghbtns.com/github-btn.html?user=leemachin&repo=say-cheese&type=watch&count=true&size=large"
   allowtransparency="true" frameborder="0" scrolling="0" width="152px" height="30px"></iframe>
           <iframe src="http://ghbtns.com/github-btn.html?user=leemachin&repo=say-cheese&type=fork&count=true&size=large"
-  allowtransparency="true" frameborder="0" scrolling="0" width="146px" height="30px"></iframe>
+  allowtransparency="true" frameborder="0" scrolling="0" width="146px" height="30px"></iframe> -->
 
         </div>
       </div>
 
       <div class="row">
         <div class="span12 say-cheese">
+        <button type="button" class="btn" id="startQrReadButton">Start QR Reading</button>
+        <button type="button" class="btn" id="stopQrReadButton">Stop QR Reading</button>
           <div id="say-cheese-container">
             <div id="action-buttons">
               <button class="btn btn-success" id="take-snapshot">snap!</button>
@@ -43,16 +45,26 @@
 
 {% highlight javascript %}
 $(function() {
-  var sayCheese = new SayCheese('#container-element', { audio: true });
-  sayCheese.on('start', function() {
+  var sayQr = new SayQRCode('#container-element', { snapshots: true });
+  sayQr.on('start', function() {
     this.takeSnapshot();
   });
 
-  sayCheese.on('snapshot', function(snapshot) {
+  sayQr.on('snapshot', function(snapshot) {
     // a snapshot has been taken, do something with it :)
   });
 
-  sayCheese.start();
+  sayQr.setQROptions(
+    function(successData) {
+      if(successData != "error decoding QR Code") {
+        // do something with the output of the QR Code decoding.
+      }
+    },
+    function(errorData) {
+      // do something with the error messages produced by decoding the QR Code.
+    });
+  sayQr.start();
+  sayQr.startQrRead(1000); // try to decode the image every 1 second.
 });
 {% endhighlight %}
 
@@ -72,7 +84,7 @@ $(function() {
         <div class="span12">
           <h3>Source and documentation</h3>
           <p>You can nab the source and see some slightly more detailed
-            documentation at the <a href="http://github.com/leemachin/say-cheese">GitHub repo</a>.
+            documentation at the <a href="http://github.com/tlangs/say-cheese-r">GitHub repo</a>.
             Feel free to file any issues or patches or whatever.</p>
         </div>
       </div>
@@ -82,17 +94,18 @@ $(function() {
     <footer>
       <div class="container">
         <hr>
-        <p>Cobbled together by <a href="http://leemach.in">Lee Machin</a>, 2012</p>
+        <p>Say Cheese cobbled together by <a href="http://leemach.in">Lee Machin</a>, 2012</p>
+        <p>Say Cheese QR Code Edition hacked together by <a href="www.herewebe.net">Trevyn Langsford</a>, 2014
       </div>
     </footer>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
     <script src="public/js/bootstrap.min.js"></script>
-    <script src="public/js/say-cheese.js"></script>
+    <script src="public/js/say-cheese-qr.js"></script>
     <script>
       $(function() {
-        var sayCheese = new SayCheese('#say-cheese-container', { audio: true });
+        var sayCheese = new SayQRCode('#say-cheese-container', { snapshots: true });
 
         sayCheese.on('start', function() {
           $('#action-buttons').fadeIn('fast');
@@ -100,6 +113,15 @@ $(function() {
           $('#take-snapshot').on('click', function(evt) {
             sayCheese.takeSnapshot();
           });
+        });
+
+        document.getElementById('startQrReadButton').on('click', function(event) {
+          sayCheese.startQrRead(1000);
+        });
+
+        document.getElementById('stopQrReadButton').on('click', function(event) {
+          sayCheese.stopQrRead();
+
         });
 
         sayCheese.on('error', function(error) {
