--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@ $(function() {
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
     <script src="public/js/bootstrap.min.js"></script>
-    <script src="public/js/say-cheese-qr.js"></script>
+    <script src="js/jsqrcode-combined.min.js"></script>
+    <script src="js/say-cheese-qr.js"></script>
     <script>
       $(function() {
         var sayCheese = new SayQRCode('#say-cheese-container', { snapshots: true });
