--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
         <div class="span12 say-cheese">
         <button type="button" class="btn" id="startQrReadButton">Start QR Reading</button>
         <button type="button" class="btn" id="stopQrReadButton">Stop QR Reading</button>
+        <span><b>Output of QR Read: </b><span id="qrSuccessSpan"></span></span>
+        <span><b>Output of QR Errors: </b><span id="qrErrorsSpan"></span></span>
           <div id="say-cheese-container">
             <div id="action-buttons">
               <button class="btn btn-success" id="take-snapshot">snap!</button>
@@ -105,7 +107,7 @@ $(function() {
     <script src="js/jsqrcode-combined.min.js"></script>
     <script src="js/say-cheese-qr.js"></script>
     <script>
-      $(function() {
+      
         var sayCheese = new SayQRCode('#say-cheese-container', { snapshots: true });
 
         sayCheese.on('start', function() {
@@ -115,14 +117,25 @@ $(function() {
             sayCheese.takeSnapshot();
           });
         });
+        sayCheese.setQROptions(
+          function(successData) {
+            if(successData != "error decoding QR Code") {
+              console.log(successData);
+              $('#qrSuccessSpan').html(successData);
+            }
+          }.bind(this),
+        function(errorData) {
+          console.log("error function");
+          console.log(errorData);
+          $('#qrErrorsSpan').html(errorData);
+        }.bind(this));
 
-        document.getElementById('startQrReadButton').on('click', function(event) {
+        $('#startQrReadButton').on('click', function(event) {
           sayCheese.startQrRead(1000);
         });
 
-        document.getElementById('stopQrReadButton').on('click', function(event) {
+        $('#stopQrReadButton').on('click', function(event) {
           sayCheese.stopQrRead();
-
         });
 
         sayCheese.on('error', function(error) {
@@ -150,7 +163,7 @@ $(function() {
         });
 
         sayCheese.start();
-      });
+      
     </script>
   </body>
 </html>
