--- a/demo.html
+++ b/demo.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
-    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="js/jquery-1.11.1.min.js"></script>
     <script src="js/say-cheese-qr.js" type="text/javascript"></script>
     <script src="js/jsqrcode-combined.min.js" type="text/javascript"></script>
 </head>
@@ -13,25 +13,22 @@
 <div id="qr-reader"></div>
 
 <script>
-    var qrReader = new SayQRCode('#qr-reader', {snapshots: true });
 
-    qrReader.setQROptions(function (successData) {
-                if (successData != "error decoding QR Code")
-                    alert(successData);
-            },
-            function (errorData) {
-                console.log(errorData);
-            });
+var qrReader = new SayQRCode('#qr-reader', {snapshots: true });
 
-    $('#startQRReader').on('click', function(event) {
-        qrReader.start();
-        qrReader.startQrRead(1000);
-    });
+qrReader.on('qrReadSuccess', function(data) {
+    console.log(data);
+});
 
-    $('#stopQRReader').on('click', function(event) {
-        qrReader.stop();
-    });
+$('#startQRReader').on('click', function(event) {
+    qrReader.start();
+    qrReader.startQrRead(1000);
+});
 
+$('#stopQRReader').on('click', function(event) {
+    qrReader.stop();
+});
+    
 </script>
 </body>
 </html>
